# lpstyl

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.atalk  README.atalk  README.md  README.protocol  README.troubleshooting  adsp.c  adsp.h  lpstyl.c  printcap  printcap.a4  styl.ppd
scripts/: direct_stylpbm  direct_stylps  stylascii  stylascii-atalk  stylascii.a4  stylps  stylps-atalk  stylps-color  stylps-color-atalk  stylps-color.a4  stylps.a4
